fixed color,aligned bottom buttons.

--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@ color:#61A4BC !important;
 }
 .page-button{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
 .sp-font{
